apps/demo-hello/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
