apps/demo-hello/base/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-preview
  namespace: apps
  labels:
    app.kubernetes.io/name: hello
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hello
  ports:
    - name: http
      port: 80
      targetPort: http
