apps/demo-hello/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello
  namespace: apps
spec:
  parentRefs:
    - name: apps-gateway
      sectionName: http
    - name: apps-gateway
      sectionName: https
  hostnames:
    - hello.ai47.cc
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hello
          port: 80
