apps/demo-hello/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
    - host: hello.ai47.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello
                port:
                  number: 80
